<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.claire.todolist.DisplayAddAction">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/task_name"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/add_task_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/task_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/task_content"
        android:layout_marginTop="80dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/add_task_content"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/task_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/task_date"
        android:layout_marginTop="140dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/add_task_date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/task_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="180dp" />


    <Button
        android:id="@+id/button"
        android:background="@drawable/round_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="300dp"
        android:text="@string/buttonAdd"
        android:textSize="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="23dp" />

    <Button
        android:id="@+id/task_select"
        android:background="@drawable/round_button"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginLeft="200dp"
        android:text="@string/task_select"
        android:textSize="10dp"
        android:layout_below="@+id/add_task_content"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
